[package]
name = "twitter_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.105"
chrono = { version = "0.4.28", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
env_logger = "0.10.0"
cargo-edit = "0.12.1"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"

